--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "05-notehub",
+  "name": "03-react-movies",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -10,22 +10,22 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@tanstack/react-query": "^5.80.6",
-    "@tanstack/react-query-devtools": "^5.80.6",
+    "@tanstack/react-query": "^5.81.5",
+    "animate.css": "^4.1.1",
     "axios": "^1.9.0",
     "formik": "^2.4.6",
     "modern-normalize": "^3.0.1",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-hot-toast": "^2.5.2",
     "react-paginate": "^8.3.0",
     "react-spinners": "^0.17.0",
-    "use-debounce": "^10.0.5",
     "yup": "^1.6.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
-    "@types/react": "^19.1.2",
-    "@types/react-dom": "^19.1.2",
+    "@types/react": "^19.1.8",
+    "@types/react-dom": "^19.1.6",
     "@vitejs/plugin-react-swc": "^3.9.0",
     "eslint": "^9.25.0",
     "eslint-plugin-react-hooks": "^5.2.0",
